# ARORA

./: .buildinfo  .pylintrc  20240619_for_geo.json  Makefile  README.md  cell_pin_vals_per_type_and_zone.csv  genindex.html  index.html  main.py  modules.html  mypy.ini  objects.inv  ouput.csv  output.csv  py-modindex.html  pyproject.toml  run_ga.py  search.html  searchindex.js  src.agent.cell.html  src.agent.circ_module.html  src.agent.circ_module_aux_syn_deg_only.html  src.agent.circ_module_cont.html  src.agent.circ_module_indep_syn_deg.html  src.agent.circ_module_universal_syndeg.html  src.agent.default_geo_neighbor_helpers.html  src.agent.html  src.html  src.loc.html  src.loc.quad_perimeter.default_perimeter_geo_neighor_helper.html  src.loc.quad_perimeter.html  src.loc.quad_perimeter.quad_perimeter.html  src.loc.vertex.html  src.loc.vertex.vertex.html  src.sim.circulator.circulator.html  src.sim.circulator.html  src.sim.divider.divider.html  src.sim.divider.html  src.sim.html  src.sim.input.convert_input_filetype_script.html  (+11 more)
src/plantem/: main.py  pyproject.toml
src/plantem/agent/: cell.py  cell_neighbor_helpers.py  circ_module.py  circ_module_cont.py  circ_module_disc.py  default_geo_neighbor_helper.py  default_geo_neighbor_helpers.py
src/plantem/loc/: quad_perimeter.py  vertex.py
src/plantem/loc/quad_perimeter/: quad_perimeter.py
src/plantem/loc/vertex/: vertex.py
src/plantem/sim/: sim.py
src/plantem/sim/circulator/: circulator.py
src/plantem/sim/divider/: divider.py
src/plantem/sim/input/: default_init_vals.csv  default_init_vals_non_root_tip.csv  (+8 more)
(+177 files in other folders)
