[tool.poetry]
name = "PythonRootDev"
version = "0.0.0"
description = ""
authors = ["author <author@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
arcade = "^2.6.17"
scipy = "^1.11.0"
pandas = "^2.0.3"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
pyglet = "^2.0.10"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
pylint = "^3.0.3"
tox = "^3.24.5"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.1.1"
mypy = "^1.8"
sphinx-rtd-theme = "^1.0.0"
sphinx_mdinclude = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]