[tool.poetry]
name = "plantem"
version = "0.1.0"
description = "Trial using python arcade package to write lighter version of ARORA"
authors = ["Jannetty <jannetty@uw.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
